Added draft of hottest day graphing with ModelRun

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -524,7 +524,7 @@
     "        num_exists = True\n",
     "        new_process_name = \"\"\n",
     "        while (num_exists):\n",
-    "            new_process_name = '{0}_{1}'.format(dd_process_name_base,current_num)\n",
+    "            new_process_name = '{0}_{1}'.format(dd_process_name_base,str(current_num).zfill(3))\n",
     "            if new_process_name in self._get_process_names():\n",
     "                current_num = current_num + 1   \n",
     "            else:\n",
@@ -545,6 +545,7 @@
     "        # Update config of new process\n",
     "        new_process['config']['fpth_inputs'] = dst\n",
     "        new_process['config']['process_name'] = new_process_name\n",
+    "        new_process['config']['script_outputs']['0']['fnm'] = '{0}{1}'.format(new_process_name,'.plotly')\n",
     "        new_process = self._create_config(new_process)\n",
     "        \n",
     "        # Add new process to data within RunApps \n",
@@ -623,19 +624,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fdir': '..\\\\reports', 'fnm': 'pdf_report.pdf', 'description': 'a pdf report from word'}\n"
-     ]
-    },
     {
      "data": {
       "text/markdown": [
@@ -663,7 +657,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd2504cd1f1147148e976e1236005db1",
+       "model_id": "6f38fad57ff64a2c8db8324df11ac6c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,7 +671,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df56f74e0d814ad095a6b8ac9867f930",
+       "model_id": "a6f59b5122904a9b98c16656b7bab411",
        "version_major": 2,
        "version_minor": 0
       },
@@ -746,7 +740,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50f847d2ce2f448482e66d5e6f8a8e0a",
+       "model_id": "6ffe9d93ef34489b86494188102f275f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -760,7 +754,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5396efdd111406699a88c1aee9cfd63",
+       "model_id": "15a674120a654abd83026b92cbf3b99f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -792,14 +786,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fdir': '..\\\\reports', 'fnm': 'pdf_report.pdf', 'description': 'a pdf report from word'}\n",
-      "{'fdir': '..\\\\data\\\\external', 'fnm': 'eplus_pipework_params.csv', 'description': 'a csv lookup table with the backend nomenclature of how pipework characteristics are named within energyPlus.'}\n"
-     ]
     },
     {
      "data": {
@@ -858,7 +844,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35c3091e46f84a5ab22031bbb29c48f1",
+       "model_id": "f4b5ee8a5eec4ab3b1adbc13211faafd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -872,7 +858,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faae701416c04c83b415af70a266cbe6",
+       "model_id": "eb6307b543d942418513378e3326be70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -886,7 +872,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d7b52ff179d4bbd85113f25876292e2",
+       "model_id": "1e73edcbdba34000bb5305f7405cbaec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,7 +886,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75f9ad8afb094060b1766cf1b57d8561",
+       "model_id": "a28c42ee80ce40c8b0fcadc07b13e943",
        "version_major": 2,
        "version_minor": 0
       },
@@ -914,7 +900,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac6282f84c4642b7ad44752b5c25094b",
+       "model_id": "930b3e83edad4ec1ba912e3a2dc5467a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -928,7 +914,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "979ecbac649340ecb41e219e72e0adae",
+       "model_id": "6372190463464996a90f9afb0e28f0cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +928,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "873325f7fd9e4280a004ebb714fe4730",
+       "model_id": "6661298f167842878bd6817363c94368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -956,7 +942,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cacbd769237440ac99f21a11bd0a9262",
+       "model_id": "c0ec969784ce43dbb209b1236828a6a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -988,14 +974,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fdir': '..\\\\reports', 'fnm': 'pdf_report.pdf', 'description': 'a pdf report from word'}\n",
-      "{'fdir': '..\\\\data\\\\external', 'fnm': 'eplus_pipework_params.csv', 'description': 'a csv lookup table with the backend nomenclature of how pipework characteristics are named within energyPlus.'}\n"
-     ]
     },
     {
      "data": {
@@ -1053,7 +1031,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69802e2744914db28ec4534a0ac35ee7",
+       "model_id": "d5258a2ef0824d38b55639cc09d7b39f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1067,7 +1045,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b8e65517acf4153b9f630387380d383",
+       "model_id": "10368c0ff5054791b8c5336118a139e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1081,7 +1059,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c59d5379241455995f4ce8ee742ab3d",
+       "model_id": "85c912145465421eaa678d232042d2f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1141,7 +1119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34977d03f8df43069f6d3c9c2e0e30d6",
+       "model_id": "ff096ae7e9034e5faa7bb5561bbef67e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1155,7 +1133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e387cfb211a743a69e87585568500c98",
+       "model_id": "13445d4fcc8048c088647a7c20b43c69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1169,7 +1147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1152b57ce10c4676a7f5f6a0893d9b55",
+       "model_id": "7a0406e535f040efb8e757ec2e74bb26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1382,6 +1360,13 @@
     "    di={\n",
     "        'fpth_script':os.path.realpath(fpth_script),\n",
     "        'fdir':os.path.join(NBFDIR),\n",
+    "        \"script_outputs\": {\n",
+    "            \"0\": {\n",
+    "                \"description\": \"Creates model run file test\",\n",
+    "                \"fdir\": '.',\n",
+    "                \"fnm\": ''\n",
+    "            }\n",
+    "        }\n",
     "    } \n",
     "    di_config = RunConfig(di).config\n",
     "    batch = []\n",
@@ -1392,6 +1377,7 @@
     "        fpth_modelruninput = os.path.join(fdir_modelruninput, '{0}{1}'.format(process_name,'.json'))\n",
     "        tmp['fpth_inputs'] = fpth_modelruninput\n",
     "        tmp['fdir_inputs'] = fdir_modelruninput\n",
+    "        tmp['script_outputs']['0']['fnm'] = '{0}{1}'.format(process_name,'.plotly')\n",
     "        tmp.update({'process_name':process_name})\n",
     "        batch.append({'app':RunApp,'config':tmp})\n",
     "        return batch\n",
@@ -1404,7 +1390,7 @@
     "            batch = add_to_batch(os.path.splitext(filename)[0], fdir_modelruninput, di, batch)\n",
     "\n",
     "    filename = os.path.basename(fpth_script)\n",
-    "    process_name = '{0}_{1}'.format(os.path.splitext(filename)[0],'0')\n",
+    "    process_name = '{0}_{1}'.format(os.path.splitext(filename)[0],'000')\n",
     "    if not batch:\n",
     "        batch = add_to_batch(process_name, fdir_modelruninput, di, batch)\n",
     "        \n",
@@ -1427,6 +1413,13 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
