Added image and plotly export for single run of overheating analysis

--- a/examples/notebooks/overheating/createmodelrun.ipynb
+++ b/examples/notebooks/overheating/createmodelrun.ipynb
@@ -2,28 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\examples\\\\notebooks\\\\overheating', 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev', 'C:\\\\engDev\\\\git_mf\\\\pyRevit\\\\MFTools.extension', 'C:\\\\engDev\\\\git_mf\\\\SAP', 'C:\\\\engDev\\\\git_mf\\\\IES\\\\dev', 'C:\\\\engDev\\\\git_mf\\\\engDevSetup', 'C:\\\\engDev\\\\git_mf\\\\ipyrun', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\python37.zip', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\DLLs', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main', '', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\win32', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\Pythonwin', 'C:\\\\Users\\\\r.woods\\\\Miniconda3\\\\envs\\\\mf_main\\\\lib\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\r.woods\\\\.ipython']\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "print(sys.path)\n",
     "import os\n",
     "NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "import pandas as pd\n",
     "from ipyrun.ipyrun import RunApp\n",
     "from mf_modules.j_header import markdown_header\n",
     "from mf_modules.pydtype_operations import write_json\n",
-    "from mf_modules.file_operations import make_dir"
+    "from mf_modules.file_operations import make_dir\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfabbf2505c945ccb2cc61ca50d85bdd",
+       "model_id": "fd82b6dbd2d94bcdabcf77c0603db2b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf92503b2db34ad3bd2d6790b3569326",
+       "model_id": "2a3d07bdaf9045d49de44d6c4e087306",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f075af0c2af4466b5ea828fd56c197c",
+       "model_id": "e2e597231a7942a6ae56b253fec783c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,18 +93,12 @@
     "        'fpth_inputs': os.path.realpath(fpth_inputs),\n",
     "        'fdir_inputs': os.path.realpath(fdir_inputs),\n",
     "        'fpth_script':os.path.realpath(fpth_script),\n",
-    "        'fdir':NBFDIR,\n",
+    "        'fdir':NBFDIR\n",
     "    }\n",
+    "\n",
     "r = RunApp(config)\n",
     "r"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
